stuf/src/p4/tests/t003.err
Semantic error on line 3: Variable 'one_shape' previously declared.
Semantic error on line 5: Variable 'another_shape' previously declared.
