stuf/src/p4/tests/t003.gpl
// previously declared variable errors
rectangle one_shape();
circle    one_shape();
triangle  another_shape();
triangle  another_shape();
